# qa_guru_3_21_hw

./: .gitignore  README.md  config.browserstack.env  config.emulation.env  config.real.env  pyproject.toml
